# BachelorSemesterProject5

./: .gitignore  Dockerfile.api  Dockerfile.client  README.md  docker-compose.yml  package-lock.json  package.json
api/: api.py  helper.py  pyproject.toml  wsgi.py
api/instance/: study.sqlite3
deployment/: nginx.default.conf
scripts/: ai_urls.txt  fetch_images.py  human_urls.txt
src/: App.js  index.css  index.js
src/components/: End.js  RatingInstruction.js
src/components/admin/: AdminConfig.js
src/components/comparison/: Compare.js
src/components/recording/: FinalVideoSelection.js  ImageRoundPage.js  Instruction.js  MicCheck.js  RecordVideoPage.js  SelectImagePage.js  SelectVideoPage.js  SomePage.js  StudyRound.js  Survey.js
src/constants/: RandomImageDisplay.js  config.js  flow.js  loadMedia.js  passages.js  survey.js
src/data/: Themes.js
