[tool.poetry]
name = "BSP5"
version = "0.1.0"
description = ""
authors = ["Kevin Santos"]
packages = []
package-mode = false


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ipython = "^8.5.0"
Flask = "^2.2.2"
pandas = "^1.5.0"
numpy = "^1.23.3"
python-dotenv = "^0.21.0"
tqdm = "^4.64.1"
gunicorn = "^20.1.0"
black = "^22.12.0"
scipy = "^1.10.0"
soundfile = "^0.11.0"
flask-cors = "^3.0.10"
flask-sqlalchemy = "^3.0.3"
textblob = "0.19.0"
speechrecognition = "^3.8.1"
pydub = "^0.25.1"
requests = "^2.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
